@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tlenlinux-7.0.2.1 (19 Apr 2011)
+
+  19 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +tlenlinux-7.0.2.1.ebuild:
+  Bumped.
+
   27 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> tlenlinux-7.0.1.68.ebuild,
   tlenlinux-7.0.1.71.ebuild, tlenlinux-7.0.1.72.ebuild:
   Updated phonon dep.
